--- a/nav.html
+++ b/nav.html
@@ -14,10 +14,12 @@
 
                 </a>
             </div>
-                <div>
-                <ul>
+            <label for="toggle">&#9776</label>
+            <input type="checkbox" id="toggle">
+                <ul class="navlinks">
                     <li><a href="#">home</a></li>
                     <li><a href="#">contact</a></li>
+                    <li><a href="#">dashboard</a></li>
                     <li><a href="#">country</a>
                         <ul>
                             <li><a href="#">canada</a></li>
@@ -25,9 +27,7 @@
                             <li><a href="#">dubai</a></li> 
                         </ul>
                     </li>
-                    <li><a href="#">comment</a></li>
                 </ul>
-                </div>
             </nav>
         </section>
     </body>
