--- a/nav.html
+++ b/nav.html
@@ -1,34 +1,33 @@
-<!DOCTYPE html >
-<html lang = "en">
-    <head>
-<title>nav world</title>
-<meta charset="utf-8">
-<meta name ="viewport" content="width=device-width, initial-scale=s1">
-<link rel="stylesheet" href="nav.css">
-    </head>
-    <body>
-        <section>
-            <nav class="navbar">
-                <div class="logo"><a href="#">
-                    <img src="ticket.jpg">
-
-                </a>
-            </div>
-            <label for="toggle">&#9776</label>
-            <input type="checkbox" id="toggle">
-                <ul class="navlinks">
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">contact</a></li>
-                    <li><a href="#">dashboard</a></li>
-                    <li><a href="#">country</a>
-                        <ul>
-                            <li><a href="#">canada</a></li>
-                            <li><a href="#">london</a></li>
-                            <li><a href="#">dubai</a></li> 
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </section>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>navbar</title>
+    <link rel="stylesheet" href="./nav.css">
+</head>
+<body>
+ <header>
+     <nav class="navbar">
+         <div>
+                <img src="mylogo.jpg">
+         </div>
+         
+             <input type="checkbox"  id="toggle">
+            <label for="toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+         <ul>
+             <li><a href="">Home</a></li>
+             <li><a href="">Service</a></li>
+             <li><a href="">About</a></li>
+             <li><a href="">Contact</a></li>
+             <li><a href="">Location</a></li>
+         </ul>
+     </nav>
+ </header>   
+</body>
 </html>
