new update to navigation bar

--- a/nav.html
+++ b/nav.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navbar</title>
     <link rel="stylesheet" href="./nav.css">
+    <link rel="stylesheet" href="file:///C:/Users/user1/Downloads/fontawesome-free-6.0.0-web/css/all.css">
+   
 </head>
 <body>
  <header>
      <nav class="navbar">
-         <div>
-                <img src="mylogo.jpg">
-         </div>
+
+       <img src="mylogo.jpg">
          
              <input type="checkbox"  id="toggle">
             <label for="toggle">
@@ -29,5 +30,6 @@
          </ul>
      </nav>
  </header>   
+        
 </body>
 </html>
