--- a/nav.html
+++ b/nav.html
@@ -31,9 +31,21 @@
             <li><a href="#">about</a></li>
         </ul>
     </nav>
-    <div class="main_content">
-        <h1>responsive navigation bar</h1>
-        <p>Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque mollitia consequatur aperiam suscipit necessitatibus a doloremque dolore, asperiores distinctio placeat modi officiis cupiditate illum deserunt inventore voluptatum obcaecati itaque nesciunt rerum et esse dolores, blanditiis incidunt. Fuga asperiores numquam iste magnam, labore repellendus dignissimos tempora repellat officiis vel ad et impedit. Laboriosam maxime similique exercitationem beatae fuga blanditiis sunt, sed sint illum adipisci provident explicabo eveniet accusantium aperiam maiores delectus officiis fugit! Ullam quidem quasi maiores. Doloribus iure maxime dolorem quaerat consectetur voluptatum assumenda alias molestiae doloremque, dicta odit aliquid illum animi cumque deleniti provident enim mollitia esse! Quod laudantium corporis voluptatem animi suscipit quibusdam ratione numquam vel asperiores hic eius, nostrum culpa et quas optio ipsa soluta impedit blanditiis perferendis dolor. Ipsum corporis veritatis culpa repellendus, magnam cumque. Sint, voluptatibus velit nulla beatae sapiente libero quia dolore iure ab quaerat repellat quis esse repudiandae aliquam ipsam, dicta et fuga maxime ea debitis alias sequi eligendi! Nesciunt commodi maxime aliquam voluptates quasi odio alias, aperiam asperiores amet, cum veniam hic a porro rem unde dolorem fugiat necessitatibus minus illo recusandae cupiditate at ipsa! Blanditiis porro mollitia excepturi quia perspiciatis aliquid deserunt facere laudantium beatae libero illo debitis nostrum quae ut culpa maxime, exercitationem possimus velit quasi dolorem tempora harum amet. Odit dolorum facere magnam odio, aperiam porro ipsa doloremque iure, minima et molestias ab praesentium adipisci ratione esse quidem, recusandae impedit rem nemo laudantium perspiciatis alias voluptatem? Eum assumenda architecto ducimus voluptatibus consectetur quaerat reiciendis nobis ad cum dolores unde quia doloribus minima quas culpa earum, sed fugiat adipisci hic magni exercitationem aut dicta? Delectus corrupti, minima voluptas inventore aut harum exercitationem modi rerum. Facilis similique temporibus obcaecati ipsum earum nemo vitae mollitia ab iure labore, maxime fuga debitis nam possimus eligendi, at ipsa quasi? Sunt, quaerat quas! Reiciendis doloremque facilis culpa maiores sit, blanditiis doloribus aspernatur eum voluptate vel beatae tenetur distinctio! Laborum quasi, libero voluptatum aspernatur maiores id doloribus aliquam, soluta reprehenderit fugit tempora, adipisci itaque sed eveniet sequi fuga! Dolores dolor iure sint perferendis earum nisi tempore omnis cupiditate quaerat repudiandae, excepturi, amet placeat? Sequi ducimus facere optio ea quia, tempore est nisi labore inventore delectus deserunt rerum officiis impedit, in voluptatem debitis vitae, laboriosam ab. Amet, quasi officiis consectetur similique autem impedit distinctio voluptate ratione eligendi nobis? Magnam consequatur quod mollitia magni perferendis! Minus magnam sequi minima, unde pariatur eaque. Repellat similique placeat ipsum excepturi dolore, facere temporibus adipisci sit asperiores nisi velit. Quaerat nihil esse id labore exercitationem reiciendis provident blanditiis! Veniam voluptas sit earum repellendus nisi enim fugiat. Ullam rem error nobis quia assumenda. Molestias non, illum veniam architecto dolorem dignissimos</p>
+     <div class="flex_container">
+        <div class="box1"><img src="mypictures/app-1.jpg"></div>
+        <div class="box2"><img src="mypictures/app-2.jpg"></div>
+        <div class="box3"><img src="mypictures/app-3.jpg"></div>
+        <div class="box4"><img src="mypictures/books-1.jpg"></div>
+        <div class="box5"><img src="mypictures/books-2.jpg"></div>
+        <div class="box6"><img src="mypictures/books-3.jpg"></div>
+        <div class="box7"><img src="mypictures/branding-1.jpg"></div>
+        <div class="box8"><img src="mypictures/branding-2.jpg"></div>
+        <div class="box9"><img src="mypictures/books-3.jpg"></div>
+        <div class="box10"><img src="mypictures/product-1.jpg"></div>
+        <div class="box11"><img src="mypictures/product-2.jpg"></div>
+        <div class="box12"><img src="mypictures/product-3.jpg"></div>
+    </div>
+        
         <footer>
         <div class="social_media">
         <i class="fa-brands fa-facebook"></i>
@@ -47,6 +59,7 @@
             <li><a href="#">blogs</a></li>
             <li><a href="#">contact</a></li>
             <li><a href="#">about</a></li>
+            <li><a href="#">information</a></li>
         </ul>
         <p class="copyright">
             future coders @ 2022
