changes to the navbar

--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>navbar</title>
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="font-icons/css/all.css">
 </head>
@@ -12,59 +12,56 @@
     <nav>
         <div class="logo">logo</div>
         <input type="checkbox" id="toggle">
-        <label for="toggle">
-            <div class="togglebar"></div>
-            <div class="togglebar"></div>
-            <div class="togglebar"></div>
+        <label class="togglebar" for="toggle">
+            <div></div>
+            <div></div>
+            <div></div>
         </label>
-        <input type="checkbox" id="toggle">
-        <ul class="list_container">
-            <li><a class="active" href="#">home</a></li>
-            <li><a href="#">blogs</a>
-                <ul>
-                    <li><a href="demo.html">sports</a></li>
-                    <li><a href="#">entertainment</a></li>
-                    <li><a href="#">politics</a></li>
-                </ul>
-            </li>
-            <li><a href="#">contact</a></li>
-            <li><a href="#">about</a></li>
-        </ul>
-    </nav>
-     <div class="flex_container">
-        <div class="box1"><img src="mypictures/app-1.jpg"></div>
-        <div class="box2"><img src="mypictures/app-2.jpg"></div>
-        <div class="box3"><img src="mypictures/app-3.jpg"></div>
-        <div class="box4"><img src="mypictures/books-1.jpg"></div>
-        <div class="box5"><img src="mypictures/books-2.jpg"></div>
-        <div class="box6"><img src="mypictures/books-3.jpg"></div>
-        <div class="box7"><img src="mypictures/branding-1.jpg"></div>
-        <div class="box8"><img src="mypictures/branding-2.jpg"></div>
-        <div class="box9"><img src="mypictures/books-3.jpg"></div>
-        <div class="box10"><img src="mypictures/product-1.jpg"></div>
-        <div class="box11"><img src="mypictures/product-2.jpg"></div>
-        <div class="box12"><img src="mypictures/product-3.jpg"></div>
-    </div>
-        
-        <footer>
-        <div class="social_media">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-whatsapp"></i>
+            <ul class="nav_container">
+                <li><a href="#">home</a></li>
+                <li><a href="#">blogs</a>
+                    <ul>
+                        <li><a href="#">sports</a></li>
+                        <li><a href="#">music</a></li>
+                        <li><a href="#">politics</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">contact</a></li>
+                <li><a href="#">about</a></li>
+            </ul>
+        </nav>
+        <div class="flex_container">
+            <div class="box1"><img src="mypictures/app-1.jpg"></div>
+            <div class="box2"><img src="mypictures/app-2.jpg"></div>
+            <div class="box3"><img src="mypictures/app-3.jpg"></div>
+            <div class="box4"><img src="mypictures/books-1.jpg"></div>
+            <div class="box5"><img src="mypictures/books-2.jpg"></div>
+            <div class="box6"><img src="mypictures/books-3.jpg"></div>
+            <div class="box7"><img src="mypictures/branding-1.jpg"></div>
+            <div class="box8"><img src="mypictures/branding-2.jpg"></div>
+            <div class="box9"><img src="mypictures/books-3.jpg"></div>
+            <div class="box10"><img src="mypictures/product-1.jpg"></div>
+            <div class="box11"><img src="mypictures/product-2.jpg"></div>
+            <div class="box12"><img src="mypictures/product-3.jpg"></div>
         </div>
-        <ul class="footer_links">
-            <li><a href="">home</a></li>
-            <li><a href="#">blogs</a></li>
-            <li><a href="#">contact</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">information</a></li>
-        </ul>
-        <p class="copyright">
-            future coders @ 2022
-        </p>
-        </footer>
-    
+        <footer>
+            <div class="social_media">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-whatsapp"></i>
+            </div>
+            <ul class="footer_links">
+                <li><a href="">home</a></li>
+                <li><a href="#">blogs</a></li>
+                <li><a href="#">contact</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">information</a></li>
+            </ul>
+            <p class="copyright">
+                future coders @ 2022
+            </p>
+            </footer>
 </body>
 </html>
